--- a/value-hover.html
+++ b/value-hover.html
@@ -116,8 +116,8 @@
       <div class="col purpose">
         <div class="wrap">
           <div class="cont-wrap">
-            <h3>Our Purpose</h3>
-            <span class="title">Enriching spaneople’s lives.</span>
+            <h3>Our purpose</h3>
+            <span class="title">Enriching people’s lives.</span>
             <a class="btn btn-secondary" href="identity/purpose.html">Know more</a>
           </div>
         </div>
@@ -127,7 +127,7 @@
           <div class="cont-wrap">
             <h3>Our vision</h3>
             <span class="title">Being the trusted partner.</span>
-            <a class="btn btn-secondary" href="identity/vision-strategy-promise.html.html">Know more</a>
+            <a class="btn btn-secondary" href="identity/vision-strategy-promise.html">Know more</a>
           </div>
         </div>
       </div>
@@ -147,6 +147,7 @@
             <ul>
               <li><a href="identity/integrity.html">Integrity</a></li>
               <li><a href="identity/empowerment.html">Empowerment</a></li>
+              <li><a href="identity/collaboration.html">Collaboration</a></li>
               <li><a href="identity/entrepreneurship.html">Entrepreneurship</a></li>
               <li><a href="identity/sustainability.html">Sustainability</a></li>
             </ul>
