--- a/identity/purpose.html
+++ b/identity/purpose.html
@@ -15,6 +15,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
+  <link rel="stylesheet" href="ui/css/purpose.css">
   <link rel="stylesheet" href="ui/css/customized.css">
   <link rel="stylesheet" href="ui/css/icons.css">
   <link rel="stylesheet" type="text/css" href="ui/css/videopopup.css" media="screen" />
