commiting video wall

--- a/value-hover.html
+++ b/value-hover.html
@@ -110,7 +110,7 @@
     </div>
   </header>
 
-  <!-- winners -->
+  <!-- our value r -->
   <div class="section page-section our-value-r">
     <div class="row">
       <div class="col purpose">
