--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -95,7 +95,7 @@
   </section>
   <article class="breadcrumb">
     <div class="container">
-      <a href="../identity.html"><span></span>Back to home</a>
+      <a href="../identity.html"><span class="icon-left-arrow"></span>Back to home</a>
     </div>
   </article>
 
@@ -110,35 +110,435 @@
         <li data-filter=".sustainability">Sustainability</li>
       </ul>
       <div class="row gallery grid">
-        <div class="col-2 grid-item integrity ">
-          <a class="item-img" href="ui/video/video-1.mp4">
-            <img class="popimg" src="ui/video/video-1.jpg" alt="">
-            <video preload="auto" poster="ui/video/video-1.jpg">
-							<source src="ui/video/video-1.mp4" type="video/mp4">
-						</video>
-          </a>
+        <div class="col-2 grid-item integrity">
+          <div class="video-wrap">
 
+            <video controls poster="ui/video/integrity/video-1.jpg">
+							<source src="ui/video/integrity/video-1.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Hui Ying Toh
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item integrity ">
+          <div class="video-wrap">
+
+            <video controls poster="ui/video/integrity/video-2.jpg">
+							<source src="ui/video/integrity/video-2.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Amanda Tan
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item integrity ">
+          <div class="video-wrap">
+
+            <video controls poster="ui/video/integrity/video-3.jpg">
+							<source src="ui/video/integrity/video-3.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Robert Koller
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item integrity ">
+          <div class="video-wrap">
+
+            <video controls poster="ui/video/integrity/video-4.jpg">
+							<source src="ui/video/integrity/video-4.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Le Thi Thu Huyen
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item integrity ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/integrity/video-5.jpg">
+							<source src="ui/video/integrity/video-5.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Jay Sern Chia
+            </div>
+          </div>
+        </div>
+        <!-- Empowerment -->
+        <div class="col-2 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/fin_linda-so.jpg">
+							<source src="ui/video/empowerment/fin_linda-so.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Jay Sern Chia
+            </div>
+          </div>
         </div>
         <div class="col-2 grid-item empowerment ">
-          <a href="ui/video/empowerment/fin_linda-so.jpg" class="item-img">
-            <img class="popimg" src="ui/video/empowerment/fin_linda-so.jpg" alt="">
-          </a>
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/gerard-roca.jpg">
+							<source src="ui/video/empowerment/gerard-roca.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Gerard Roca
+            </div>
+          </div>
         </div>
-        <div class="col-2 grid-item collaboration ">
-          <a class="item-img" href="ui/video/collaboration/abderrahmane-sairi.jpg">
-            <img class="popimg" src="ui/video/collaboration/abderrahmane-sairi.jpg" alt="">
-          </a>
+        <div class="col-2 grid-item empowerment ">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/hec-katrina-lo.jpg">
+							<source src="ui/video/empowerment/hec-katrina-lo.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Katrina Lo
+            </div>
+          </div>
         </div>
-        <div class="col-2 grid-item entrepreneurship ">
-          <a href="ui/video/entrepreneurship/cherry-lam.jpg" class="item-img">
-            <img class="popimg" src="ui/video/entrepreneurship/cherry-lam.jpg" alt="">
-          </a>
+        <div class="col-2 grid-item empowerment">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/kongwette.jpg">
+							<source src="ui/video/empowerment/kongwette.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Kongwette Aonlamoon
+            </div>
+          </div>
         </div>
-        <div class="col-2 grid-item sustainability ">
-          <a href="ui/video/sustainability/bernadette-lim-wei-see.jpg" class="item-img">
-            <img class="popimg" src="ui/video/sustainability/bernadette-lim-wei-see.jpg" alt="">
-          </a>
+        <div class="col-2 grid-item empowerment">
+          <div class="video-wrap">
+
+            <video controls poster="ui/video/empowerment/leo-ng.jpg">
+							<source src="ui/video/empowerment/leo-ng.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Leo Ng
+            </div>
+          </div>
         </div>
+        <div class="col-2 grid-item empowerment">
+          <div class="video-wrap">
+
+            <video controls poster="ui/video/empowerment/nicha.jpg">
+							<source src="ui/video/empowerment/nicha.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Nicha Panapitakkul
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item empowerment">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/sofiacastro.jpg">
+							<source src="ui/video/empowerment/sofiacastro.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Sofia Castro
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item empowerment">
+          <div class="video-wrap">
+            <video controls poster="ui/video/empowerment/victorcho.jpg">
+							<source src="ui/video/empowerment/victorcho.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              victorcho
+            </div>
+          </div>
+        </div>
+
+        <!-- collaboration -->
+
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/abderrahmane-sairi.jpg">
+							<source src="ui/video/collaboration/abderrahmane-sairi.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              victorcho
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/anna-wilk.jpg">
+							<source src="ui/video/collaboration/anna-wilk.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Anna Wilk
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/chino-tang.jpg">
+							<source src="ui/video/collaboration/chino-tang.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Chino Tang
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/christy-chi.jpg">
+							<source src="ui/video/collaboration/christy-chi.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Christy Chi
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/dic-leung.jpg">
+							<source src="ui/video/collaboration/dic-leung.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Dic Leung
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/ethan-liang.jpg">
+							<source src="ui/video/collaboration/ethan-liang.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Ethan Liang
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/hai-thanh-tran.jpg">
+							<source src="ui/video/collaboration/hai-thanh-tran.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Hai Thanh Tran
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/james-hsu.jpg">
+							<source src="ui/video/collaboration/james-hsu.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              James Hsu
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/kathrin-silja-schole.jpg">
+							<source src="ui/video/collaboration/kathrin-silja-schole.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Kathrin Silja Schole
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/preksa.jpg">
+							<source src="ui/video/collaboration/preksa.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Preksa
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/somaly.jpg">
+							<source src="ui/video/collaboration/somaly.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Somaly
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/tiffaniya-fernando.jpg">
+							<source src="ui/video/collaboration/tiffaniya-fernando.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Tiffaniya Fernando
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item collaboration">
+          <div class="video-wrap">
+            <video controls poster="ui/video/collaboration/trang-dinh-van-le.jpg">
+							<source src="ui/video/collaboration/trang-dinh-van-le.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Trang Dinh Van Le
+            </div>
+          </div>
+        </div>
+
+        <!-- entrepreneurship -->
+        <div class="col-2 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/cherry-lam.jpg">
+							<source src="ui/video/entrepreneurship/cherry-lam.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Trang Dinh Van Le
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/cook-chung.jpg">
+							<source src="ui/video/entrepreneurship/cook-chung.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Cook Chung
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/eugeniakrasnok.jpg">
+							<source src="ui/video/entrepreneurship/eugeniakrasnok.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Eugenia Krasnok
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/gary-yang.jpg">
+							<source src="ui/video/entrepreneurship/gary-yang.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Gary Yang
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/pheap-sm.jpg">
+							<source src="ui/video/entrepreneurship/pheap-sm.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Pheap Sm
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/sovandy-sm.jpg">
+							<source src="ui/video/entrepreneurship/sovandy-sm.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Sovandy Sm
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item entrepreneurship">
+          <div class="video-wrap">
+            <video controls poster="ui/video/entrepreneurship/wencylung.jpg">
+							<source src="ui/video/entrepreneurship/wencylung.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Wency Lung
+            </div>
+          </div>
+        </div>
+
+        <!-- sustainability -->
+        <div class="col-2 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/bernadette-lim-wei-see.jpg">
+							<source src="ui/video/sustainability/bernadette-lim-wei-see.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Bernadette Lim Wei See
+            </div>
+          </div>
+        </div>
+
+        <div class="col-2 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/chawakorn-thammason.jpg">
+							<source src="ui/video/sustainability/chawakorn-thammason.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Chawakorn Thammason
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/ernest-bc-khoo.jpg">
+							<source src="ui/video/sustainability/ernest-bc-khoo.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Ernest BC Khoo
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/kristie-wong.jpg">
+							<source src="ui/video/sustainability/kristie-wong.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Kristie Wong
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/nicolette-wong.jpg">
+							<source src="ui/video/sustainability/nicolette-wong.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Nicolette Wong
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/pauline-yu.jpg">
+							<source src="ui/video/sustainability/pauline-yu.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Pauline Yu
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/safety-khanisorn.jpg">
+							<source src="ui/video/sustainability/safety-khanisorn.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Safety Khanisorn
+            </div>
+          </div>
+        </div>
+        <div class="col-2 grid-item sustainability">
+          <div class="video-wrap">
+            <video controls poster="ui/video/sustainability/tw-robin.jpg">
+							<source src="ui/video/sustainability/tw-robin.mp4" type="video/mp4">
+						</video>
+            <div class="name">
+              Robin Feng
+            </div>
+          </div>
+        </div>
+
+
+        <div class="clearfix"></div>
+
 
       </div>
     </div>
@@ -164,48 +564,27 @@
   <!-- Script for smooth scrolling -->
 
   <script src="ui/js/isotope.pkgd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
   <script>
-    $(function() {
-      $('.gallery').magnificPopup({
-        delegate: 'a',
-        type: 'image',
-        gallery: {
-          enabled: true
-        },
-        callbacks: {
-          open: function() {
-
-            // https://github.com/dimsemenov/Magnific-Popup/issues/125
-            $('html').css('margin-right', 0);
-
-            // Play video on open:
-            $(this.content).find('video')[0].play();
-
-          },
-          close: function() {
-
-            // Reset video on close:
-            $(this.content).find('video')[0].load();
-
-          }
-        }
-
+    var $gallery = $('.gallery').isotope({});
+    $(document).ready(function() {
+      $('.filtering').on('click', 'li', function() {
+        var $filterValue = $(this).attr('data-filter');
+        $gallery.isotope({
+          filter: $filterValue
+        });
+        $(this).addClass('active').siblings().removeClass('active')
       });
-
     });
 
-    var $gallery = $('.gallery').isotope({
+    var figure = $(".grid-item").hover(hoverVideo, hideVideo);
 
-    });
+    function hoverVideo(e) {
+      $('video', this).get(0).play();
+    }
 
-    $('.filtering').on('click', 'li', function() {
-      var $filterValue = $(this).attr('data-filter');
-      $gallery.isotope({
-        filter: $filterValue
-      });
-      $(this).addClass('active').siblings().removeClass('active')
-    });
+    function hideVideo(e) {
+      $('video', this).get(0).pause();
+    }
   </script>
 </body>
 
