--- a/identity/integrity.html
+++ b/identity/integrity.html
@@ -389,50 +389,50 @@
               <carousel-3d :autoplay="false" :display="3" :height="640" :controls-visible="true" :controls-prev-html="'&#10092;'" :controls-next-html="'&#10093;'" :controls-width="30" :controls-height="60" @after-slide-change="onAfterSlideChange" @before-slide-change="onBeforeSlideChange"
                 @last-slide="onLastSlide">
                 <slide :index="0">
-                  <video controls poster="ui/video/video-1.jpg" id="testi-vd0">
-										<source src="ui/video/video-1.mp4" type="video/mp4">
-										<source src="ui/video/video-1.webm" type="video/webm">
-										<source src="ui/video/video-1.ogv" type="video/ogg">
+                  <video controls poster="ui/video/integrity/video-1.jpg" id="testi-vd0">
+										<source src="ui/video/integrity/video-1.mp4" type="video/mp4">
+										<source src="ui/video/integrity/video-1.webm" type="video/webm">
+										<source src="ui/video/integrity/video-1.ogv" type="video/ogg">
 									</video>
                   <div class="label">
                     Hui Ying Toh
                   </div>
                 </slide>
                 <slide :index="1">
-                  <video controls poster="ui/video/video-2.jpg" id="testi-vd1">
-										<source src="ui/video/video-2.mp4" type="video/mp4">
-										<source src="ui/video/video-2.webm" type="video/webm">
-										<source src="ui/video/video-2.ogv" type="video/ogg">
+                  <video controls poster="ui/video/integrity/video-2.jpg" id="testi-vd1">
+										<source src="ui/video/integrity/video-2.mp4" type="video/mp4">
+										<source src="ui/video/integrity/video-2.webm" type="video/webm">
+										<source src="ui/video/integrity/video-2.ogv" type="video/ogg">
 									</video>
                   <div class="label">
                     Amanda Tan
                   </div>
                 </slide>
                 <slide :index="2">
-                  <video controls poster="ui/video/video-6.jpg" id="testi-vd2">
-									<source src="ui/video/video-6.webm" type="video/webm">
-									<source src="ui/video/video-6.mp4" type="video/mp4">
-									<source src="ui/video/video-6.ogv" type="video/ogg">
+                  <video controls poster="ui/video/integrity/video-6.jpg" id="testi-vd2">
+									<source src="ui/video/integrity/video-6.webm" type="video/webm">
+									<source src="ui/video/integrity/video-6.mp4" type="video/mp4">
+									<source src="ui/video/integrity/video-6.ogv" type="video/ogg">
 								</video>
                   <div class="label">
                     Robert Koller
                   </div>
                 </slide>
                 <slide :index="3">
-                  <video controls poster="ui/video/video-4.jpg" id="testi-vd3">
-									<source src="ui/video/video-4.mp4" type="video/mp4">
-									<source src="ui/video/video-4.webm" type="video/webm">
-									<source src="ui/video/video-4.ogv" type="video/ogg">
+                  <video controls poster="ui/video/integrity/video-4.jpg" id="testi-vd3">
+									<source src="ui/video/integrity/video-4.mp4" type="video/mp4">
+									<source src="ui/video/integrity/video-4.webm" type="video/webm">
+									<source src="ui/video/integrity/video-4.ogv" type="video/ogg">
 								</video>
                   <div class="label">
                     Le Thi Thu Huyen
                   </div>
                 </slide>
                 <slide :index="4">
-                  <video controls poster="ui/video/video-5.jpg" id="testi-vd4">
-									<source src="ui/video/video-5.mp4" type="video/mp4">
-									<source src="ui/video/video-5.webm" type="video/webm">
-									<source src="ui/video/video-5.ogv" type="video/ogg">
+                  <video controls poster="ui/video/integrity/video-5.jpg" id="testi-vd4">
+									<source src="ui/video/integrity/video-5.mp4" type="video/mp4">
+									<source src="ui/video/integrity/video-5.webm" type="video/webm">
+									<source src="ui/video/integrity/video-5.ogv" type="video/ogg">
 								</video>
                   <div class="label">
                     Jay Sern Chia
